# zfs

./: .editorconfig  .gitmodules  Makefile.am  configure.ac  cppcheck-suppressions.txt
.github/: codecov.yml
cmd/dbufstat/: dbufstat
cmd/zdb/: zdb.c
config/: ax_code_coverage.m4  kernel-kmem.m4  zfs-build.m4
contrib/: Makefile.am
contrib/bash_completion.d/: Makefile.am
include/: zfeature_common.h
include/os/linux/spl/sys/: kmem.h
include/spl/sys/: kmem.h  kmem_cache.h
include/sys/: Makefile.am  arc.h  arc_impl.h  dmu_objset.h  dsl_dataset.h  spa.h  zfs_context.h  zfs_ioctl.h  zio.h  zio_compress.h
include/sys/fs/: zfs.h
include/sys/zstd/: Makefile.am  bitstream.h  zstd.h  zstd_compress_internal.h  zstd_impl.h  zstd_internal.h
lib/: Makefile.am
lib/libzpool/: Makefile.am  kernel.c
lib/libzstd/: Makefile.am
man/man5/: zpool-features.5
man/man8/: zfsprops.8
module/: Kbuild.in  Makefile.bsd  Makefile.in
module/os/freebsd/zstd/: zstd_os.c
module/os/linux/spl/: spl-vmem.c
module/os/linux/zstd/: Makefile.in  zstd_os.c
module/spl/: spl-kmem-cache.c  spl-kmem.c  spl-proc.c  spl-vmem.c
module/zcommon/: zfeature_common.c  zfs_prop.c
module/zfs/: Makefile.in  arc.c  dbuf.c  dmu.c  dmu_objset.c  dmu_recv.c  dmu_send.c  dsl_dataset.c  metaslab.c  spa_log_spacemap.c  spa_misc.c  txg.c  zcp_get.c  zfs_ioctl.c  zfs_vnops.c  zio.c  zio_compress.c  zpl_inode.c
module/zstd/: Makefile.in  README.md  zfs_zstd.c  zstd.c  zstd_compress.c  zstd_decompress.c  zstd_decompress_block.c  zstd_fast.c  zstdlib-in.c
module/zstd/include/: aarch64_compat.h  limits.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h
rpm/generic/: zfs.spec.in
scripts/: Makefile.am  dkms.mkconf  zfs.sh
tests/runfiles/: common.run  linux.run
tests/zfs-tests/include/: libtest.shlib  properties.shlib
tests/zfs-tests/tests/functional/cli_root/zdb/: zdb_args_neg.ksh  zdb_decompress_zstd.ksh
tests/zfs-tests/tests/functional/cli_root/zfs_receive/: Makefile.am  zfs_receive_from_zstd.ksh
tests/zfs-tests/tests/functional/cli_root/zpool_get/: zpool_get.cfg  zpool_get_002_pos.ksh
tests/zfs-tests/tests/functional/history/: history_002_pos.ksh
tests/zfs-tests/tests/functional/rsend/: rsend_012_pos.ksh  send-c_verify_ratio.ksh
tests/zfs-tests/tests/functional/tmpfile/: Makefile.am
